Add account headers in student picker

--- a/app/src/main/res/layout/dialog_account.xml
+++ b/app/src/main/res/layout/dialog_account.xml
@@ -8,7 +8,7 @@
     <TextView
         android:id="@+id/accountDialogTitle"
         android:layout_width="match_parent"
-        android:layout_height="64dp"
+        android:layout_height="wrap_content"
         android:paddingStart="24dp"
         android:paddingLeft="24dp"
         android:paddingEnd="24dp"
@@ -23,6 +23,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/accountDialogTitle"
+        android:layout_marginTop="8dp"
         android:overScrollMode="never"
         tools:itemCount="3"
         tools:listitem="@layout/item_account" />
