--- a/app/src/main/res/layout/item_account.xml
+++ b/app/src/main/res/layout/item_account.xml
@@ -6,10 +6,7 @@
     android:layout_height="56dp"
     android:background="?selectableItemBackground"
     android:orientation="horizontal"
-    android:paddingStart="24dp"
-    android:paddingLeft="24dp"
-    android:paddingEnd="24dp"
-    android:paddingRight="24dp"
+    android:paddingHorizontal="16dp"
     tools:context=".ui.modules.account.AccountAdapter">
 
     <ImageView
@@ -27,7 +24,7 @@
         android:id="@+id/accountItemName"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="20dp"
+        android:layout_marginStart="16dp"
         android:ellipsize="end"
         android:maxLines="1"
         android:textSize="16sp"
@@ -40,7 +37,7 @@
         android:id="@+id/accountItemSchool"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="20dp"
+        android:layout_marginStart="16dp"
         android:layout_marginTop="3dp"
         android:ellipsize="end"
         android:maxLines="1"
