--- a/app/src/main/res/layout/item_account.xml
+++ b/app/src/main/res/layout/item_account.xml
@@ -3,9 +3,10 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="56dp"
+    android:layout_height="wrap_content"
     android:background="?selectableItemBackground"
     android:orientation="horizontal"
+    android:paddingVertical="8dp"
     android:paddingHorizontal="16dp"
     tools:context=".ui.modules.account.AccountAdapter">
 
@@ -13,7 +14,6 @@
         android:id="@+id/accountItemImage"
         android:layout_width="40dp"
         android:layout_height="40dp"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/ic_all_account"
@@ -47,4 +47,21 @@
         app:layout_constraintStart_toEndOf="@id/accountItemImage"
         app:layout_constraintTop_toBottomOf="@id/accountItemName"
         tools:text="@tools:sample/lorem/random" />
+
+    <TextView
+        android:id="@+id/accountItemLoginMode"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="3dp"
+        android:ellipsize="end"
+        android:maxLines="1"
+        android:textColor="?android:textColorSecondary"
+        android:textSize="12sp"
+        android:visibility="gone"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@id/accountItemImage"
+        app:layout_constraintTop_toBottomOf="@id/accountItemSchool"
+        tools:text="Tryb API mobilne"
+        tools:visibility="visible" />
 </androidx.constraintlayout.widget.ConstraintLayout>
